<resources>
    <string name="app_name">Restaurant Report</string>

    <string name="restaurant_name">Restaurant Name</string>
    <string name="issues_found"># Issues Found</string>
    <string name="last_inspected">Last Inspected: </string>
    <string name="low">low</string>
    <string name="restaurant_icon">Restaurant Icon</string>
    <string name="short_description_of_violaition">Short description of violaition</string>
    <string name="critical">critical</string>
    <string name="_07_march_2019">07 March 2019</string>

    <string name="restaurant_toolbar" translatable="false">restaurant toolbar</string>
    <string name="rest_tool_title" translatable="false">rest toolbar title</string>
    <string name="placehold_toolbar_title_1" translatable="false">restaurant name</string>
    <string name="placehold_textView" translatable="false">TextView</string>
    <string name="placehold_insp_date" translatable="false">Inspection Date</string>
    <string name="placehold_detail_1" translatable="false">Detail 1</string>
    <string name="placehold_detail_2" translatable="false">Detail 2</string>
    <string name="placehold_haz_lvl">N/A</string>
    <string name="restaurant_logo_desc" translatable="false">Restaurant Logo</string>
    <string name="changeable_icon_for_hazard_level">Changeable icon for hazard level</string>
    <string name="rest_addr_prefix">Address: %1$s</string>
    <string name="rest_lat_prefix">Latitude: %1$s</string>
    <string name="rest_long_prefix">Longitude: %1$s</string>
    <string name="rest_insp_prefix">Past Inspections: </string>

    <string name="insp_date_prefix" translatable="false">%1$s</string>
    <string name="crit_postfix">%1$s Critical Issue</string>
    <string name="crit_postfix_s">%1$s Critical Issues</string>
    <string name="non_crit_postfix">%1$s Non - Critical Issue</string>
    <string name="non_crit_postfix_s">%1$s Non - Critical Issues</string>

    <string name="inspection_report">Inspection Report</string>
    <string name="inspection_type_routine">Inspection Type : Routine</string>
    <string name="critical_issues" translatable="false"># Critical Issues</string>
    <string name="non_critical_issues" translatable="false"># Non - Critical Issues</string>
    <string name="hazard_icon">hazard icon</string>

    <string name="inspect_type_routine">Routine Inspection</string>
    <string name="inspect_type_follow_up">Follow-Up Inspection</string>

    <string name="back">Back</string>
    <string name="pop_up_title">Detail</string>
    <string name="title_activity_maps">Map</string>

    <string name="mapApiKey" translatable="false">AIzaSyBzgnaqru9EU5xK8wLIWqK1f7rQ9AzG0qE</string>
    <string name="list_view">List View</string>
    <string name="map_view">Map</string>
    <string name="btn_coords_text" translatable="false" />

    <string name="Update">Update</string>
    <string name="Later">Later</string>
    <string name="checking_for_updates">Checking for Updates</string>

    <!--PopupDialog-->
    <string name="popup_title">Details</string>

    <!--RestaurantListAdapter-->
    <string name="lastInspect_never">Never</string>
    <string name="lastInspect_found_issue_s">%1$s Issues Found</string>
    <string name="lastInspect_found_issue">%1$s Issue Found</string>
    <string name="lastInspect_date">Last Inspected: %1$s</string>

    <!--Restaurant class-->
    <string name="restaurant_n_a">N/A</string>
    <string name="restaurant_hazard_low">low</string>
    <string name="restaurant_hazard_moderate">moderate</string>
    <string name="restaurant_hazard_mid">mid</string>
    <string name="restaurant_hazard_high">high</string>

    <!--ViolationListAdapter-->
    <string name="violation_list_critical">Critical</string>
    <string name="violation_list_not_critical">Not Critical</string>

    <!--getDisplayDate-->
    <string name="get_date_ago_day">%1$s day ago</string>
    <string name="get_date_ago_day_s">%1$s days ago</string>
    <string name="get_date_inspect_scheduled">Inspection scheduled in %1$s days</string>
    <string name="get_date_str1_str2" translatable="false">%1$s %2$s</string>

    <!--SearchActivity-->
    <string name="tbrSearch">Search</string>
    <string name="tbrSearchTitle">Search</string>
    <string name="srch_restaurant_name">Restaurant Name</string>
    <string name="srch_hazard_level">Hazard Level:</string>
    <string name="srch_low">Low</string>
    <string name="srch_mid">Mid</string>
    <string name="srch_high">High</string>
    <string name="srch_num_crit_violations">Number of Critical Violations within 1 Year:</string>
    <string name="srch_favourited">Favourited</string>
    <string name="srch_0" translatable="false">0</string>
    <string name="srch_greater_than">Greater Than</string>
    <string name="srch_less_than">Less Than</string>
    <string name="srch_clear">Clear Search</string>
    <string name="srch_btn_search">Search</string>
    <string name="update_download">Download</string>
    <string name="update_cancel">Cancel</string>
    <string name="update_progress">update progress</string>
    <string name="update_available">Update Available.</string>
    <string name="update_ask">Would you like to update?</string>
    <string name="update_update">Update</string>
    <string name="srch_no_result">No results found!</string>
    <string name="restaurant_favourite_state" translatable="false">Shows Restaurant Favourite State</string>
    <string name="restaurant_details_fav_button" translatable="false">Click to Favaourite or Unfavourite a Restaurant</string>
    <string name="search_enabled">Enabled</string>
    <string name="dialog_new_insp_ok">OK</string>
    <string name="dialog_new_starred_inspections">Your favourites have new inspections!</string>

    <!--Short Violation data arrays-->
    <array name="violation_1">
        <item>101</item>
        <item>Construction not built according to code</item>
    </array>
    <array name="violation_2">
        <item>102</item>
        <item>Operation of an unapproved food premises</item>
    </array>
    <array name="violation_3">
        <item>103</item>
        <item>Operation has an invalid food permit</item>
    </array>
    <array name="violation_4">
        <item>104</item>
        <item>Permit not posted clearly</item>
    </array>
    <array name="violation_5">
        <item>201</item>
        <item>Food contamination found</item>
    </array>
    <array name="violation_6">
        <item>202</item>
        <item>Food processing unfit for consumption</item>
    </array>
    <array name="violation_7">
        <item>203</item>
        <item>Food not cooled in an acceptable manner</item>
    </array>
    <array name="violation_8">
        <item>204</item>
        <item>Food not cooked/heated in a safe way</item>
    </array>
    <array name="violation_9">
        <item>205</item>
        <item>Cold food stored/displayed above 4 &#176;C</item>
    </array>
    <array name="violation_10">
        <item>206</item>
        <item>Hot food stored/displayed below 60 &#176;C</item>
    </array>
    <array name="violation_11">
        <item>208</item>
        <item>Foods obtained from unapproved sources</item>
    </array>
    <array name="violation_12">
        <item>209</item>
        <item>Food not protected from contamination</item>
    </array>
    <array name="violation_13">
        <item>210</item>
        <item>Food not thawed in an acceptable manner</item>
    </array>
    <array name="violation_14">
        <item>211</item>
        <item>Frozen food stored/displayed above -18 &#176;C</item>
    </array>
    <array name="violation_15">
        <item>212</item>
        <item>No acceptable written food handling procedures</item>
    </array>
    <array name="violation_16">
        <item>301</item>
        <item>Contact surfaces are not hygienic</item>
    </array>
    <array name="violation_17">
        <item>302</item>
        <item>Contact surfaces not properly washed</item>
    </array>
    <array name="violation_18">
        <item>303</item>
        <item>Sanitary hot &amp; cold water equip. inadequate</item>
    </array>
    <array name="violation_19">
        <item>304</item>
        <item>Premises not free of pests</item>
    </array>
    <array name="violation_20">
        <item>305</item>
        <item>Conditions may allow pests growth</item>
    </array>
    <array name="violation_21">
        <item>306</item>
        <item>Food premises does not remain hygienic</item>
    </array>
    <array name="violation_22">
        <item>307</item>
        <item>Contact surfaces not of suitable material</item>
    </array>
    <array name="violation_23">
        <item>308</item>
        <item>Contact surfaces not in working order</item>
    </array>
    <array name="violation_24">
        <item>309</item>
        <item>Cleaning agents improperly labeled</item>
    </array>
    <array name="violation_25">
        <item>310</item>
        <item>Throwaway equip. used more than once</item>
    </array>
    <array name="violation_26">
        <item>311</item>
        <item>Premises not maintained as per approved plans</item>
    </array>
    <array name="violation_27">
        <item>312</item>
        <item>Non-equip. items being stored on the premises</item>
    </array>
    <array name="violation_28">
        <item>313</item>
        <item>Live animal on premise (not guide animal)</item>
    </array>
    <array name="violation_29">
        <item>314</item>
        <item>No acceptable written sanitation procedures</item>
    </array>
    <array name="violation_30">
        <item>315</item>
        <item>Fridges and hot-hold equip. has bad thermometers</item>
    </array>
    <array name="violation_31">
        <item>401</item>
        <item>Adequate wash basins unavailable</item>
    </array>
    <array name="violation_32">
        <item>402</item>
        <item>Employees does not wash hands accordingly</item>
    </array>
    <array name="violation_33">
        <item>403</item>
        <item>Bad personal hygiene and hair control</item>
    </array>
    <array name="violation_34">
        <item>404</item>
        <item>Employee smoking in food prep. areas</item>
    </array>
    <array name="violation_35">
        <item>501</item>
        <item>Operator has no FOODSAFE L1 or similar</item>
    </array>
    <array name="violation_36">
        <item>502</item>
        <item>No one other than operator has FOODSAFE L1</item>
    </array>
</resources>
