<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutListRow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="4dp">


    <ImageView
        android:id="@+id/imgRestaurantIcon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:baselineAligned="false"
        android:contentDescription="@string/restaurant_icon"
        android:src="@drawable/dinner_attr_freepik"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtRestaurantName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="2dp"
        android:text="@string/restaurant_name"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/txtHazardLevel"
        app:layout_constraintStart_toEndOf="@+id/imgRestaurantIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNumOfIssues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/issues_found"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="@+id/txtRestaurantName"
        app:layout_constraintTop_toBottomOf="@+id/txtRestaurantName" />

    <TextView
        android:id="@+id/txtInspectionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/last_inspected"
        android:textColor="#000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/txtRestaurantName"
        app:layout_constraintTop_toBottomOf="@+id/txtNumOfIssues" />

    <TextView
        android:id="@+id/txtHazardLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/placehold_haz_lvl"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgHazardIcon"
        app:layout_constraintEnd_toStartOf="@+id/imgHazardIcon"
        app:layout_constraintTop_toTopOf="@+id/imgHazardIcon" />

    <ImageView
        android:id="@+id/imgHazardIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/changeable_icon_for_hazard_level"
        android:src="@drawable/haz_low"
        app:layout_constraintEnd_toEndOf="@+id/nonClickableFavIcon"
        app:layout_constraintTop_toBottomOf="@+id/nonClickableFavIcon" />

    <ImageView
        android:id="@+id/nonClickableFavIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/restaurant_favourite_state"
        android:src="@drawable/ic_favorite_border_black_24dp"
        android:tint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtRestaurantName" />


</androidx.constraintlayout.widget.ConstraintLayout>