<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutViolationList"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="4dp">


    <ImageView
        android:id="@+id/violationNatureIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/restaurant_icon"
        android:src="@drawable/pest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtShortDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/short_description_of_violaition"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/violationNatureIcon"
        app:layout_constraintEnd_toStartOf="@+id/txtCriticality"
        app:layout_constraintStart_toEndOf="@+id/violationNatureIcon"
        app:layout_constraintTop_toTopOf="@+id/violationNatureIcon" />

    <TextView
        android:id="@+id/txtCriticality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/critical"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgCriticalityIcon"
        app:layout_constraintEnd_toStartOf="@+id/imgCriticalityIcon"
        app:layout_constraintTop_toTopOf="@+id/imgCriticalityIcon" />

    <ImageView
        android:id="@+id/imgCriticalityIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/changeable_icon_for_hazard_level"
        android:src="@drawable/critical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/violationNatureIcon" />


</androidx.constraintlayout.widget.ConstraintLayout>