<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutInfoWindow"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutInfoContent"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtInfoViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/placehold_detail_1"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtInfoViewAddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/placehold_detail_2"
            app:layout_constraintStart_toStartOf="@+id/txtInfoViewName"
            app:layout_constraintTop_toBottomOf="@+id/txtInfoViewName" />

        <TextView
            android:id="@+id/txtHazardLevel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="4dp"
            android:text="@string/placehold_haz_lvl"
            android:textColor="#000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtInfoViewAddr"
            app:layout_constraintEnd_toStartOf="@+id/imgHazardIcon2"
            app:layout_constraintTop_toTopOf="@+id/txtInfoViewAddr" />

        <ImageView
            android:id="@+id/imgHazardIcon2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/changeable_icon_for_hazard_level"
            android:src="@drawable/low"
            app:layout_constraintBottom_toBottomOf="@+id/txtHazardLevel2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtHazardLevel2">

        </ImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>