<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutRestaurant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RestaurantActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbrRestanurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/placehold_toolbar_title_1"
            android:textColor="#ffffff"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="14dp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="310dp"
        android:layout_height="30dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/placehold_textView"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbrRestanurant" />

    <TextView
        android:id="@+id/txtLattitude"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/placehold_textView"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

    <TextView
        android:id="@+id/txtLongtitude"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/placehold_textView"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLattitude" />

    <TextView
        android:id="@+id/txtInspHeader"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/placehold_textView"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLongtitude" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInspHeader">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="136dp"
        android:layout_height="127dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/restaurant_logo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbrRestanurant"
        app:srcCompat="@drawable/cutlery_attr_freepik" />


</androidx.constraintlayout.widget.ConstraintLayout>